dnl Process this file with autoconf to produce a configure script.
AC_INIT([sockets], [0.0.2], [pabitraadhikari@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror])
AC_PROG_CC
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
 Makefile
 src/Makefile
 src/exaples/Makefile
 src/simple_server/Makefile
 src/datagram_socket/Makefile
 src/file_tranfer/Makefile
 src/authentication/Makefile
 src/multiple_client/Makefile
 src/daemon/Makefile
])
AC_OUTPUT
