bin_PROGRAMS = client server client1 server1 getname getdate client2 server2 select server3
client_SOURCES = client.c
server_SOURCES = server.c
client1_SOURCES = client1.c
server1_SOURCES = server1.c
getname_SOURCES = getname.c
getdate_SOURCES = getdate.c
client2_SOURCES = client2.c
server2_SOURCES = server2.c
select_SOURCES = select.c
server3_SOURCES = server3.c

